--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,4 @@
 {
   "version": 2,
-  "name": "fi-product-menu",
-  "builds": [
-    {
-      "src": "fi-menu.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/fi-menu.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        }
-      ]
-    }
-  ]
+  "name": "fi-product-menu"
 }
